--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "private": true,
   "sideEffects": false,
   "scripts": {
-    "build": "remix build",
+    "build": "npm run build:css && remix build",
+    "build:css": "tailwindcss -m -i ./styles/app.css -o app/styles/app.css",
     "dev:remix": "remix watch",
     "dev:wrangler": "cross-env NODE_ENV=development wrangler pages dev ./public",
-    "dev": "remix build && run-p \"dev:*\"",
+    "dev": "concurrently \"npm run dev:css\" \"remix build && run-p \"dev:*\"\"",
+    "dev:css": "tailwindcss -w -i ./styles/app.css -o app/styles/app.css",
     "start": "cross-env NODE_ENV=production npm run dev:wrangler"
   },
   "dependencies": {
@@ -22,8 +24,12 @@
     "@remix-run/eslint-config": "^1.7.2",
     "@types/react": "^17.0.47",
     "@types/react-dom": "^17.0.17",
+    "autoprefixer": "^10.4.12",
+    "concurrently": "^7.4.0",
     "eslint": "^8.23.1",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.1.8",
     "typescript": "^4.7.4",
     "wrangler": "^2.0.27"
   },
